test: add artistservice with test
